@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-04-17T01:36:06Z",
-  "count" : 124,
+  "timestamp" : "2025-04-30T01:38:01Z",
+  "count" : 50,
   "count_minmax" : [ 28, 124 ],
-  "count_decinc" : [ -0, +124 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "count_decinc" : [ -74, +124 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
