@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-04-29T01:38:32Z",
-  "count_outdated" : 251437,
-  "uniques_outdated" : 2551,
-  "count" : 253209,
-  "uniques" : 2582,
+  "timestamp" : "2025-04-30T01:38:01Z",
+  "count_outdated" : 251560,
+  "uniques_outdated" : 2552,
+  "count" : 253331,
+  "uniques" : 2583,
   "clones" : [
     {
-      "timestamp": "2025-04-15T00:00:00Z",
-      "count": 50,
-      "count_minmax": [ 27, 123 ],
-      "count_decinc": [ 73, 123 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2025-04-16T00:00:00Z",
-      "count": 124,
+      "count": 50,
       "count_minmax": [ 28, 124 ],
-      "count_decinc": [ 0, 124 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count_decinc": [ 74, 124 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-04-17T00:00:00Z",
@@ -133,12 +124,21 @@
     },
     {
       "timestamp": "2025-04-29T00:00:00Z",
-      "count": 28,
-      "count_minmax": [ 28, 28 ],
-      "count_decinc": [ 0, 28 ],
+      "count": 124,
+      "count_minmax": [ 28, 124 ],
+      "count_decinc": [ 0, 124 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-04-30T00:00:00Z",
+      "count": 26,
+      "count_minmax": [ 26, 26 ],
+      "count_decinc": [ 0, 26 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
